--- a/assets/css/base.postcss
+++ b/assets/css/base.postcss
@@ -3,7 +3,7 @@
     @apply overflow-x-hidden;
   }
   body {
-    @apply bg-bodyBg text-darkColor dark:text-whiteColor dark:bg-darkColor font-Nunito overflow-x-hidden;
+    @apply bg-bodyBg  text-darkColor dark:text-whiteColor dark:bg-darkColor font-Nunito overflow-x-hidden;
 
     h1,
     h2,
@@ -12,6 +12,8 @@
     h5,
     h6 {
       @apply font-Nunito;
+      font-size: revert;
+      font-weight: revert;
     }
 
     * img {
